# pyrite64

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CameraController.ts  CartoonPass.ts  Changelog.md  GridHelper.ts  N64MaterialBridge.ts  README.html  Readme.md  VibeAnimTimeline.js  VibeDashboard.js  VibeDashboard.ts  VibeNode.ts  Viewport3D.ts  cel_shader.c  cel_shader.h  faq.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/workflows/: docs.yml  editor.yml
data/img/icons/: sprites.xcf
data/lang/: messages_en.json  messages_fr.json
data/scripts/: assetTable.h  globalScriptTable.cpp
data/shader/: n64.frag.glsl  n64.frag.spv  n64.vert.glsl  n64.vert.spv
docs/: build_and_serve.sh  build_editor.md  conf.py  dev.html  faq.html  faq.md  index.rst  manual.html  setup_editor.md  usage_editor.md
docs/dev/: build.html
docs/docs/: faq.md  faq.rst  manual.rst
docs/docs/dev/: build.rst
docs/docs/manual/: assets.rst  developer_reference.md  introduction.rst  launcher.rst  script.rst
docs/docs/manual/assets/: images.md  model3d.md
docs/docs/manual/intro/: structure.rst
docs/docs/manual/script/: intro.md  objScript.md
docs/manual/: cli.html  developer_reference.md  install.html  launcher.html
n64/: CMakeLists.txt
n64/engine/: .gitignore  Makefile
n64/engine/include/actor/: actorTable.h  base.h
n64/engine/include/assets/: assetManager.h  assetTypes.h
n64/engine/include/audio/: audioManager.h
n64/engine/src/: main.cpp
n64/examples/bigtex/: project.p64proj
n64/examples/hello_world/: Makefile.custom  project.json
n64/examples/jam25/: .gitattributes  .gitignore  CMakeLists.txt  Makefile.custom  project.json  project.p64proj
n64/examples/jam25/assets/: Altinn-DINExp.ttf.conf  Bot.prefab  Coin.prefab  CutsceneFirstLevel.p64graph  Goal.prefab  MartianMono.ttf.conf  OnGoal.p64graph  ParticlesCoin.prefab  Player.prefab  PlayerCam.prefab  PlayerJump00.wav.conf  RocknRollOne-Regular.ttf.conf  SpaceMono-Bold.ttf.conf  TitleCard.prefab  TitleLoadScene.p64graph  Void.prefab  atmos.blend  atmos.glb  bgTitle_border.png.conf  bgTitle_grad.png.conf  bootLogos.p64graph  bot.blend  bot.glb  cam.blend  cam.glb  envBlock.blend  envBlock.glb  floor04_ci4.png.conf  head.blend  head.glb  lightmap02.bci.png.conf  map00.blend  map00.glb  map00.glb.conf  model3.glb.conf  planet04.bci.png.conf  player.blend  player.glb  player.glb.conf  skybox.blend  (+6 more)
n64/examples/jam25/assets/mapEnd/: stoneBci.blend  stoneBci.glb  stoneBci.glb.conf
n64/examples/jam25/assets/mapPaper/: cardSide.png.conf  mapPaper.blend  mapPaper.glb  mapParts.blend  mapParts.glb  mapParts.glb.conf  skybox.blend  skybox.glb  skybox.glb.conf
n64/examples/jam25/assets/objects/: goal.blend  goal.glb  goal.png.conf  platformMetal00.blend  platformMetal00.glb  platformTest.blend  platformTest.glb  void.blend  void.glb
n64/examples/jam25/assets/ptx/: coinPart.png.conf  line.png.conf
n64/examples/jam25/assets/retro/: mapRetro.blend  mapRetro.glb  mapRetro.glb.conf  tileset00.png.conf
n64/examples/jam25/assets/sfx/: FadeOut.wav.conf  PlayerJump00.wav.conf
n64/examples/jam25/assets/testMap/: stoneGrassBorder06_64.png.conf
n64/examples/jam25/assets/tutorial/: block.blend  block.glb  block.glb.conf  block0.glb  mapTutorial.blend  mapTutorial.glb  mapTutorial.glb.conf
n64/examples/jam25/assets/ui/: expPack.png.conf  numbers.ia8.png.conf
n64/examples/jam25/data/scenes/1/: scene.json
n64/examples/jam25/data/scenes/10/: scene.json
n64/examples/jam25/data/scenes/11/: scene.json
n64/examples/jam25/data/scenes/2/: scene.json
n64/examples/jam25/data/scenes/3/: scene.json
n64/examples/jam25/data/scenes/4/: scene.json
n64/examples/jam25/data/scenes/5/: scene.json
n64/examples/jam25/data/scenes/6/: scene.json
n64/examples/jam25/data/scenes/7/: scene.json
n64/examples/jam25/data/scenes/8/: scene.json
n64/examples/jam25/data/scenes/9/: scene.json
n64/examples/jam25/src/user/: BootChecks.cpp  BootLogos.cpp  Coin.cpp  Credits.cpp  DebugCam.cpp  Goal.cpp  HUD.cpp  LoadingZone.cpp  MiniMap.cpp  ObjBot.cpp  ObjHead.cpp  ObjVoid.cpp  Particles.cpp  Player.cpp  RotAnim.cpp  Seesaw.cpp  SkyBox.cpp  TestRot.cpp  TitleCard.cpp  TitleScreen.cpp  globalSetup.cpp  globalSetup.cpp.conf  globals.h
n64/examples/jam25/src/user/systems/: context.h  dialog.cpp  dialog.h  dialogMessages.h  dropShadows.cpp  dropShadows.h  fonts.cpp  fonts.h  marker.cpp  marker.h  screenFade.cpp  screenFade.h  sprites.cpp  sprites.h
n64/examples/jam25/tools/: skybox.sh
n64/examples/material_test/: project.p64proj
src/: cli.cpp  context.h  main.cpp
src/editor/: actions.cpp  actions.h  editorMain.cpp  editorMain.h  editorScene.cpp  editorScene.h  globalActions.cpp  inputConfig.h  keymap.cpp  keymap.h  preferences.cpp  preferences.h  recentProjects.cpp  recentProjects.h  selectionUtils.cpp  selectionUtils.h  undoRedo.cpp  undoRedo.h  window.cpp
src/editor/imgui/: helper.cpp  helper.h  lang.cpp  lang.h  theme.cpp  theme.h
src/editor/pages/: editorMain.cpp  editorScene.cpp  editorScene.h  launcher.cpp  launcher.h
src/n64/: ccMapping.cpp  ccMapping.h  libdragon.h
src/p64/: globalScriptTable.cpp  scriptTable.cpp
src/project/: assetManager.cpp  assetManager.h  project.cpp  project.h
src/project/assets/: collision.cpp  collision.h  material.cpp  material.h  model3d.h
src/project/component/: components.h
src/project/graph/: graph.cpp
src/project/scene/: object.cpp  object.h  scene.cpp  scene.h  sceneManager.cpp
src/renderer/: camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  mesh.cpp  mesh.h  n64Mesh.cpp  n64Mesh.h  object.cpp  object.h  pipeline.cpp  scene.cpp  shader.cpp  texture.cpp  texture.h  uniforms.h
src/renderer/n64/: n64Material.cpp
src/shader/: build.sh  defines.h  n64.frag.glsl  n64.vert.glsl  ubo.glsl  utils.glsl
src/utils/: aabb.h  binaryFile.h  codeParser.cpp  filePicker.cpp  filePicker.h  fs.cpp  fs.h  hash.h  json.h  jsonBuilder.h  meshGen.cpp  meshGen.h  proc.cpp  proc.h  prop.h  string.h  textureFormats.h  time.cpp
(+151 files in other folders)
